cluster/apps/teleport/teleport-cluster/app/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: teleport
  namespace: teleport
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "HostRegexp(`teleport.arsenikki.xyz`, `{subdomain:[a-zA-Z0-9-]+}.teleport.arsenikki.xyz`)"
      services:
        - name: teleport
          port: 443
          nativeLB: true
          # Instruct Traefik to use HTTPS when calling backend
          scheme: https
          # Reference ServersTransport that disables TLS verification
          serversTransport: teleport-insecure-https
